PDF: Don't use the currently set color  after a 'Q' operator

https://bugs.freedesktop.org/show_bug.cgi?id=31140
(cherry picked from commit e23bcfd4300870034f07b1ecd1bb4d2ac95d9785)